tests/baselines/reference/_caxnc-eqneqLRNindep-0000.errors.txt
tests/cases/conformance/_caxnc-eqneq/_caxnc-eqneqLRNindep-0000.ts(3,5): error TS2367: This condition will always return 'false' since the types 'number' and 'string' have no overlap.


==== tests/cases/conformance/_caxnc-eqneq/_caxnc-eqneqLRNindep-0000.ts (1 errors) ====
    let x: string | number= 1;
    let y: string | number= 1;
    if (x===(y="one")){
        ~~~~~~~~~~~~~
!!! error TS2367: This condition will always return 'false' since the types 'number' and 'string' have no overlap.
        x;y;
    }
    x;y;